# juicysfplugin

./: .gitmodules  CMakeLists.txt  README.md  vcpkg.json
scripts/linux/: build-debug.sh
scripts/win/: build-fluidsynth-x64.bat
src/: FluidSynthModel.cpp  FluidSynthModel.h  InstrClient.cpp  InstrClient.h  InstrServer.cpp  InstrServer.h  InstrServerMessage.cpp  InstrServerMessage.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SlidersComponent.cpp
